adding frontend for the posing clinic

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ backend/llama-venv
 backend/uploads
 backend/.env
 backend/venv/*
+
+posing-clinic-frontend/.env
+posing-clinic-frontend/node_modules
+posing-clinic-frontend/build
+posing-clinic-frontend/.vscode
+posing-clinic-frontend/.DS_Store
+posing-clinic-frontend/.idea
+posing-clinic-frontend/package-lock.json
