--- a/posing-clinic-frontend/package.json
+++ b/posing-clinic-frontend/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",    
+    "start": "./run.sh",
+    "stop": "./stop.sh",
+    "logs": "docker-compose logs -f",
+    "restart": "docker-compose restart",
+    "clean": "docker-compose down -v && docker system prune -f"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
