--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 pydantic==2.11.3
 pydantic_core==2.33.1
+pydantic-settings>=2.0.0
 python-dotenv==1.1.0
 python-engineio==4.12.0
 python-socketio==5.13.0
