--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       GROQ_API_KEY: ${GROQ_API_KEY}
     ports:
       - "8000:8000"
+      - "5678:5678"  # For the debugger
     depends_on:
       - postgres
       - minio
