--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,38 +3,51 @@ anyio==4.9.0
 bidict==0.23.1
 blinker==1.9.0
 certifi==2025.1.31
+cffi==1.17.1
+chardet==3.0.4
 click==8.1.8
-debugpy
+cryptography==44.0.2
+debugpy==1.8.14
 distro==1.9.0
 dotenv==0.9.9
+fastapi==0.115.12
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.1
 groq==0.22.0
 h11==0.14.0
+h2==3.2.0
+hpack==3.0.0
 httpcore==1.0.8
 httpx==0.28.1
+hyperframe==5.2.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
-MarkupSafe==3.0.
+MarkupSafe==3.0.2
+passlib==1.7.4
 pillow==11.2.1
+pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
-pydantic-settings>=2.0.0
+pydevd-pycharm==241.14494.241
+PyJWT==2.10.1
 python-dotenv==1.1.0
 python-engineio==4.12.0
+python-multipart==0.0.20
 python-socketio==5.13.0
+rfc3986==1.5.0
 simple-websocket==1.1.0
 sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+uvicorn==0.34.2
 Werkzeug==3.1.3
 wsproto==1.2.0
+pydantic_settings
+psycopg2-binary==2.9.10
 minio
-fastapi>=0.68.0
-uvicorn>=0.15.0
-python-multipart
-sqlalchemy
-psycopg2-binary
-passlib==1.7.4
