--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   redis:
-    image: redis:2.6.17
-    container_name: redis-d
+    image: redis:7.2
+    container_name: redis-data
     restart: always
     ports:
       - "6397:6397"
     volumes:
-      - redis_data:/data
+      - redis-data:/data
     command: redis-server
 
   zookeeper:
