feat: implement server-sent events for evaluation updates and add upload functionality

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
                     "localRoot": "${workspaceFolder}/backend",
                     "remoteRoot": "/app"
                 }
-            ]
+            ],
+            "justMyCode": false
         },
         {
             "name": "🐍 Python: FastAPI",
