--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Frontend Docker image
-      run: docker build ./frontend --file Dockerfile --tag posing-clinic-frontend:$(date +%s)
+      run: docker build ./frontend --file ./frontend/Dockerfile --tag posing-clinic-frontend:$(date +%s)
 
     - name: Build the Backend Docker Image
-      run: docker build ./backend --file Dockerfile --tag posing-clinic-backend:$(date +%s)
+      run: docker build ./backend --file ./backend/Dockerfile --tag posing-clinic-backend:$(date +%s)
