--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,12 @@ FROM node:22
 WORKDIR /app
 
 COPY package*.json ./
-COPY frontend/package*.json ./
+RUN npm install
+
+COPY package-lock.json ./ 
 RUN npm install
 
 COPY . .
-COPY frontend/ ./
 
 EXPOSE 5173
 
