--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,10 @@ FROM node:22
 
 WORKDIR /app
 
+RUN ls
 COPY package*.json ./
 RUN npm install
 
-COPY package-lock.json ./ 
-RUN npm install
 
 COPY . .
 
